--- a/assets/sass/_color.scss
+++ b/assets/sass/_color.scss
@@ -1,8 +1,41 @@
 //Theme color
 $theme-color: #14435c;
 $theme-color2: #1f2b7b;
-$theme-color3: #f27420;
-$theme-color4: #ff3500;
+
+$fgray: #777;
+$hgray: #888;
+$ogray: #999;
+$lgray: #eee;
+$gray: #f7f7f7;
+$cgray: #cfcfcf;
+$bgray: #a6b4bb;
+$ggray: #8f9195;
+$mgray: #d3d3d4;
+$egray: #8a8a8a;
+$jgray: #57667e;
+$igray: #616373;
+$vgray: #f0e9ff;
+$blue: #011548;
+$ablue: #464d65;
+$bblue: #0d2d3e;
+$lblue: #1696e7;
+$cblue: #1b4962;
+$fblue: #233148;
+$dblue: #191d34;
+$eblue: #161e46;
+$rblue: #0e132a;
+$sblue: #000a2d;
+$lvelvet: #3b3647;
+$velvet: #1c165c;
+$light: #cecece;
+$lorange: #dca73a;
+$aorange: #e3c6c6;
+$borange: #f79960;
+$orange: #f04e3c;
+$red: #eb566c;
+$lred: #e94d65;
+$hred: #f00;
+$fred: #ec5b53;
 
 // btn and Section color
 $btn_bg: #ff2143;
@@ -20,13 +53,21 @@ $section_bg1: #454545;
 
 //Colors
 $white: #fff;
+$swhite: #fdfdfd;
+$rwhite: #f2f2f2;
+$lwhite: #e5e6e9;
+$trueblack: #000;
 $black: #16161a;
-$gray: #f7f7fd;
+$nblack: #121212;
+$mblack: #11141b;
+$oblack: #2a2a2a;
+$pblack: #212529;
+$qblack: #0b1416;
+$yblack: #2e2200;
 
 $gray-color: #bebebe;
 $gray-color-2: #bdbdbd;
 $gray-color3: #5c5c5c;
-$white_color: #fff;
 
 // font color
 $font_color1: #10285d;
