--- a/assets/sass/_wantTowork.scss
+++ b/assets/sass/_wantTowork.scss
@@ -1,7 +1,7 @@
 .wantToWork-area {
 	.wantToWork-caption {
 		h2 {
-			color: #fff;
+			color: $white;
 			font-size: 46px;
 			font-weight: 700;
 			line-height: 1.5;
