--- a/assets/sass/_common.scss
+++ b/assets/sass/_common.scss
@@ -52,7 +52,7 @@ a {
 	color: rgb(99, 92, 92);
 }
 a:hover {
-	color: #fff;
+	color: $white;
 }
 a:focus,
 a:hover,
@@ -62,7 +62,7 @@ a:hover,
 }
 a,
 button {
-	color: #fff;
+	color: $white;
 	outline: medium none;
 }
 button:focus,
@@ -104,7 +104,7 @@ li {
 }
 
 hr {
-	border-bottom: 1px solid #eceff8;
+	border-bottom: 1px solid $hr-border-color;
 	border-top: 0 none;
 	margin: 30px 0;
 	padding: 0;
@@ -115,7 +115,7 @@ hr {
 	position: relative;
 }
 .theme-overlay::before {
-	background: #1696e7 none repeat scroll 0 0;
+	background: $lblue none repeat scroll 0 0;
 	content: '';
 	height: 100%;
 	left: 0;
@@ -144,7 +144,7 @@ hr {
 .overlay2::before {
 	position: absolute;
 	content: '';
-	background-color: #2e2200;
+	background-color: $yblack;
 	top: 0;
 	left: 0;
 	width: 100%;
@@ -159,7 +159,7 @@ hr {
 	padding-bottom: 120px;
 }
 .separator {
-	border-top: 1px solid #f2f2f2;
+	border-top: 1px solid $rwhite;
 }
 
 .mb-90 {
@@ -177,7 +177,7 @@ hr {
 	padding: 27px 44px;
 	text-transform: uppercase;
 	font-family: $font_1;
-	color: #fff;
+	color: $white;
 	cursor: pointer;
 	display: inline-block;
 	font-size: 14px;
@@ -201,8 +201,8 @@ hr {
 		top: 0;
 		width: 101%;
 		height: 101%;
-		background: #fff;
-		color: #000 !important;
+		background: $white;
+		color: $trueblack !important;
 		z-index: 1;
 		transition: transform 0.5s;
 		transition-timing-function: cubic-bezier(0.5, 1.6, 0.4, 0.7);
@@ -213,7 +213,7 @@ hr {
 }
 .btn:hover::before {
 	transform: scaleX(1);
-	color: #000 !important;
+	color: $trueblack !important;
 	z-index: -1;
 }
 .btn.focus,
@@ -225,7 +225,7 @@ hr {
 	padding: 30px 53px;
 }
 .btn-black {
-	background: #0b1416;
+	background: $qblack;
 }
 .btn3 {
 	width: 100%;
@@ -245,7 +245,7 @@ hr {
 	width: 100%;
 	background: $btn_bg;
 	padding: 19px 44px;
-	color: #fff;
+	color: $white;
 	cursor: pointer;
 	text-transform: uppercase;
 	font-family: $font_2;
@@ -269,12 +269,12 @@ hr {
 }
 // Custom Btn
 .submit-btn2 {
-	background: #ec5b53;
+	background: $fred;
 	width: 100%;
 	height: 60px;
 	padding: 10px 20px;
 	border: 0;
-	color: #fff;
+	color: $white;
 	text-transform: capitalize;
 	cursor: pointer;
 	font-size: 16px;
@@ -282,8 +282,8 @@ hr {
 }
 
 .border-btn {
-	border: 1px solid #e3c6c6;
-	color: #464d65;
+	border: 1px solid $aorange;
+	color: $ablue;
 	background: none;
 	border-radius: 5px;
 	text-transform: capitalize;
@@ -339,7 +339,7 @@ hr {
 		right: 16px;
 	}
 
-	color: #fff;
+	color: $white;
 	font-size: 20px;
 	text-align: center;
 	border-radius: 50%;
@@ -364,7 +364,7 @@ hr {
 	z-index: 9999;
 	-webkit-animation: 300ms ease-in-out 0s normal none 1 fadeindown;
 	animation: 300ms ease-in-out 0s normal none 1 fadeInDown;
-	background: #fff;
+	background: $white;
 }
 
 /* Sticky end */
@@ -545,7 +545,7 @@ hr {
 		font-weight: 500;
 		margin-bottom: 17px;
 		text-transform: uppercase;
-		color: #eb566c;
+		color: $red;
 		display: inline-block;
 		position: relative;
 		padding-left: 68px;
@@ -557,7 +557,7 @@ hr {
 			content: '';
 			width: 54px;
 			height: 2px;
-			background: #eb566c;
+			background: $red;
 			top: 0;
 			left: 0;
 			transform: translateY(-50%);
@@ -578,13 +578,13 @@ hr {
 }
 .section-tittle2 {
 	span {
-		color: #cecece;
+		color: $light;
 		&::before {
-			background: #fff;
+			background: $white;
 		}
 	}
 	h2 {
-		color: #fff;
+		color: $white;
 		@media #{$xs} {
 			font-size: 27px;
 		}
@@ -598,14 +598,14 @@ hr {
 }
 
 .input-invalid-message {
-	color: #ff2143;
+	color: $btn_bg;
 }
 
 .btn:disabled,
 .btn.btn:disabled {
 	transition: none;
 	transform: none;
-	border: 1px solid #212529;
+	border: 1px solid $pblack;
 }
 
 .img-fluid {
