--- a/assets/sass/_contact.scss
+++ b/assets/sass/_contact.scss
@@ -6,7 +6,7 @@
 
 		svg,
 		span {
-			color: #8f9195;
+			color: $ggray;
 			font-size: 27px;
 		}
 	}
@@ -15,7 +15,7 @@
 		h3 {
 			margin-bottom: 0;
 			font-size: 16px;
-			color: #2a2a2a;
+			color: $oblack;
 			a {
 				&:hover {
 					color: $theme-color2;
@@ -24,7 +24,7 @@
 		}
 
 		p {
-			color: #8a8a8a;
+			color: $egray;
 		}
 	}
 }
@@ -45,7 +45,7 @@
 	}
 
 	.form-control {
-		border: 1px solid #e5e6e9;
+		border: 1px solid $lwhite;
 		border-radius: 0;
 		height: 48px;
 		padding-left: 18px;
@@ -59,7 +59,7 @@
 
 		&::placeholder {
 			font-weight: 300;
-			color: #999;
+			color: $ogray;
 		}
 	}
 
@@ -78,7 +78,7 @@
 		padding: 80px 0 50px;
 	}
 	.btn_2 {
-		background-color: #191d34;
+		background-color: $dblue;
 		padding: 18px 60px;
 		border-radius: 50px;
 		margin-top: 0;
