--- a/assets/sass/_count_down.scss
+++ b/assets/sass/_count_down.scss
@@ -1,12 +1,12 @@
 .count-down-area {
 	margin-top: -60px;
 	.single-counter {
-		background: #fff;
+		background: $white;
 		padding: 44px 10px 44px 9px;
-		border: 1px solid #cfcfcf;
+		border: 1px solid $cgray;
 		margin-bottom: 30px;
 		&:hover {
-			background: #ff2143;
+			background: $btn_bg;
 			box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.05);
 			position: relative;
 			border: 0;
@@ -15,19 +15,19 @@
 				position: absolute;
 				width: 100%;
 				height: 100%;
-				border: 10px solid #fff;
+				border: 10px solid $white;
 				left: 0;
 				top: 0;
 			}
 			span {
-				color: #fff;
+				color: $white;
 			}
 			p {
-				color: #fff;
+				color: $white;
 			}
 		}
 		span {
-			color: #000;
+			color: $trueblack;
 			font-size: 60px;
 			font-weight: 400;
 			font-family: $font_1;
@@ -37,7 +37,7 @@
 		}
 		p {
 			font-size: 18px;
-			color: #737980;
+			color: $body-text-color;
 			line-height: 1;
 			margin: 0;
 			padding: 0;
