--- a/assets/sass/_services_section.scss
+++ b/assets/sass/_services_section.scss
@@ -1,5 +1,5 @@
 .services-area {
-	background: #f7f7f7;
+	background: $gray;
 	.single-services {
 		@media #{$sm} {
 			margin-bottom: 30px;
@@ -14,7 +14,7 @@
 		}
 		.services-caption {
 			position: relative;
-			background: #fff;
+			background: $white;
 			width: 100%;
 			padding: 33px 46px 16px 32px;
 			margin-top: -50px;
@@ -36,7 +36,7 @@
 				line-height: 13px;
 				font-family: $font_1;
 				position: relative;
-				color: #e94d65;
+				color: $lred;
 				font-weight: 400;
 				font-size: 18px;
 				display: block;
@@ -49,7 +49,7 @@
 					top: 0;
 					left: 0;
 					transform: translateY(-50%);
-					background: #e94d65;
+					background: $lred;
 				}
 			}
 			p {
@@ -57,7 +57,7 @@
 				line-height: 1.5;
 				font-family: $font_2;
 				a {
-					color: #0e132a;
+					color: $rblue;
 					font-weight: 400;
 					font-size: 20px;
 					display: block;
@@ -74,4 +74,9 @@
 			}
 		}
 	}
+}
+
+.section-top-border {
+	padding: 50px 0;
+	border-top: 1px dotted $lgray;
 }
