--- a/assets/sass/_slicknav.scss
+++ b/assets/sass/_slicknav.scss
@@ -53,7 +53,7 @@
 
 .slicknav_menu .slicknav_icon-bar {
 	display: block;
-	background-color: #fff;
+	background-color: $white;
 	height: 3px;
 	margin: 5px 0;
 	-webkit-transition: all 0.3s ease 0s;
@@ -75,17 +75,17 @@
 
 .slicknav_nav {
 	clear: both;
-	color: #fff;
+	color: $white;
 	margin: 0;
 	font-size: 0.875em;
 	list-style: none;
 	overflow: hidden;
-	background: #fff;
+	background: $white;
 	float: right;
 	margin-top: 11px;
 	padding: 19px;
 	width: 100%;
-	border-bottom: 1px solid #eee;
+	border-bottom: 1px solid $lgray;
 }
 
 .slicknav_nav ul {
@@ -106,7 +106,7 @@
 	text-decoration: none;
 	font-size: 14px;
 	font-weight: 400;
-	color: #0d2d3e;
+	color: $bblue;
 }
 
 .slicknav_nav a {
@@ -125,9 +125,9 @@
 .slicknav_nav a:hover {
 	-webkit-border-radius: 0;
 	-moz-border-radius: 0;
-	background: #f79960 none repeat scroll 0 0;
+	background: $borange none repeat scroll 0 0;
 	border-radius: 0;
-	color: #fff;
+	color: $white;
 }
 
 /* ===== mobile menu slicknav ===== */
@@ -140,10 +140,10 @@
 }
 
 .slicknav_icon-bar {
-	background: #fff !important;
+	background: $white !important;
 }
 
 .slicknav_menu .slicknav_nav a:hover {
 	background: transparent;
-	color: #dca73a;
+	color: $lorange;
 }
