--- a/assets/sass/_testimonial.scss
+++ b/assets/sass/_testimonial.scss
@@ -1,5 +1,5 @@
 .testimonial-area {
-	background: #121212;
+	background: $nblack;
 	position: relative;
 	.testimonial-caption {
 		padding-left: 80px;
@@ -31,7 +31,7 @@
 				padding-right: 100px;
 				margin-bottom: 50px;
 				font-size: 20px;
-				color: #d3d3d4;
+				color: $mgray;
 				font-weight: 300;
 				@media #{$lg} {
 					font-size: 20px;
@@ -61,7 +61,7 @@
 			.founder-text {
 				margin-left: 20px;
 				& span {
-					color: #f04e3c;
+					color: $orange;
 					font-size: 30px;
 					font-weight: 600;
 					@media #{$xs} {
@@ -69,7 +69,7 @@
 					}
 				}
 				& p {
-					color: #57667e;
+					color: $jgray;
 					font-weight: 500;
 					line-height: 1.5;
 				}
@@ -91,14 +91,14 @@
 		font-size: 0;
 		@include transition(0.3s);
 
-		color: #616373;
+		color: $igray;
 		background: none;
 		margin: 0 auto;
 		bottom: 0;
-		border: 1px solid #616373;
+		border: 1px solid $igray;
 		&:hover {
-			border: 1px solid #f04e3c;
-			color: #f04e3c;
+			border: 1px solid $orange;
+			color: $orange;
 		}
 	}
 	button.slick-next {
