--- a/assets/sass/_blog_page.scss
+++ b/assets/sass/_blog_page.scss
@@ -9,6 +9,7 @@
 				position: relative;
 				img {
 					width: 100%;
+					height: auto;
 					@include transform(scale(1));
 
 					transition: all 0.5s ease-out 0s;
