--- a/assets/sass/_color.scss
+++ b/assets/sass/_color.scss
@@ -4,14 +4,14 @@ $theme-color2: #1f2b7b;
 
 $fgray: #777;
 $hgray: #888;
-$ogray: #999;
+$ogray: #777575;
 $lgray: #eee;
 $gray: #f7f7f7;
 $cgray: #cfcfcf;
 $bgray: #a6b4bb;
 $ggray: #8f9195;
 $mgray: #d3d3d4;
-$egray: #8a8a8a;
+$egray: #736e6e;
 $jgray: #57667e;
 $igray: #616373;
 $vgray: #f0e9ff;
@@ -33,19 +33,20 @@ $aorange: #e3c6c6;
 $borange: #f79960;
 $orange: #f04e3c;
 $red: #eb566c;
+$redalt: #ce3249;
 $lred: #e94d65;
 $hred: #f00;
 $fred: #ec5b53;
 
 // btn and Section color
-$btn_bg: #ff2143;
+$btn_bg: #e21736;
 
 // font-color
 $heading-color: #092c3f;
 $heading_color2: #242b5e;
 
 // Body Font
-$body-text-color: #737980;
+$body-text-color: #6f7479;
 $hr-border-color: #eceff8;
 
 // Section Bg
