--- a/assets/sass/_common.scss
+++ b/assets/sass/_common.scss
@@ -545,7 +545,7 @@ hr {
 		font-weight: 500;
 		margin-bottom: 17px;
 		text-transform: uppercase;
-		color: $red;
+		color: $redalt;
 		display: inline-block;
 		position: relative;
 		padding-left: 68px;
