--- a/assets/sass/_services_section.scss
+++ b/assets/sass/_services_section.scss
@@ -36,7 +36,7 @@
 				line-height: 13px;
 				font-family: $font_1;
 				position: relative;
-				color: $lred;
+				color: $redalt;
 				font-weight: 400;
 				font-size: 18px;
 				display: block;
