--- a/assets/sass/_color.scss
+++ b/assets/sass/_color.scss
@@ -3,7 +3,7 @@ $theme-color: #14435c;
 $theme-color2: #1f2b7b;
 
 $fgray: #777;
-$hgray: #888;
+$hgray: #757575;
 $ogray: #777575;
 $lgray: #eee;
 $gray: #f7f7f7;
@@ -34,7 +34,7 @@ $borange: #f79960;
 $orange: #f04e3c;
 $red: #eb566c;
 $redalt: #ce3249;
-$lred: #e94d65;
+$lred: #e60427;
 $hred: #f00;
 $fred: #ec5b53;
 
