--- a/assets/sass/_headerMenu.scss
+++ b/assets/sass/_headerMenu.scss
@@ -245,6 +245,13 @@
 	}
 }
 
+.logo {
+	.nuxt-link-active {
+		height: 100%;
+		display: inline-block;
+	}
+}
+
 .links,
 .logo {
 	position: relative;
