Header fixture cypress

--- a/assets/sass/_headerMenu.scss
+++ b/assets/sass/_headerMenu.scss
@@ -157,6 +157,7 @@
 
 	.header-sticky {
 		padding: 10px;
+		box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.2);
 		&.sticky-bar {
 			background: $white;
 			.main-menu {
